--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -12,16 +12,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install SSL certificates
+      run: sudo apt-get update && sudo apt-get install -y ca-certificates
+
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
         php-version: '8.3'
+
     - uses: actions/checkout@v3
+
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
     - name: Install Dependencies
       run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
+
     - name: Generate key
       run: php artisan key:generate
+
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: mysql
@@ -29,4 +37,4 @@ jobs:
         DB_DATABASE: ${{ secrets.DB_TEST_DATABASE }}
         DB_USERNAME: ${{ secrets.DB_TEST_USERNAME }}
         DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
-      run: vendor/bin/phpunit
+      run: php artisan test
