--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -8,19 +8,22 @@ on:
 
 jobs:
   laravel-tests:
+    name: Laravel Tests
     runs-on: ubuntu-latest
 
     steps:
-      - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up PHP
+        uses: shivammathur/setup-php@main
         with:
           php-version: "8.3"
-
-      - uses: actions/checkout@v3
 
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
-      - name: Install Dependencies
+      - name: Install composer dependencies
         run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
 
       - name: Generate key
@@ -39,3 +42,29 @@ jobs:
           DB_USERNAME: ${{ secrets.DB_TEST_USERNAME }}
           DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
         run: php artisan test
+
+  laravel-deploy:
+    name: Deploy to Server
+    needs: laravel-tests
+    runs-on: ubuntu-latest
+    if: success()
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: SSH Deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_PROD_HOST }}
+          username: ${{ secrets.SERVER_PROD_USERNAME }}
+          key: ${{ secrets.SERVER_PROD_SSH_KEY }}
+          port: ${{ secrets.SERVER_PROD_PORT }}
+          script: |
+            cd ${{ secrets.SERVER_PROD_PATH }}
+            git pull origin main
+            composer install --no-dev
+            npm install --production
+            php artisan migrate
+            php artisan optimize
+            npm run build
